@@ -1,51 +1,44 @@
 package com.Api.EMS.model;
 
-import jakarta.persistence.*;
 import lombok.*;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Entity
+@Document(collection = "users")
 @Data
+@Builder
 @NoArgsConstructor
 @AllArgsConstructor
-@Builder
 public class User implements UserDetails {
 
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
-    @Column(nullable = false, unique = true)
-    private String username;
-
-    @Column(nullable = false)
-    private String password;
-
-    @Column(nullable = false)
-    private String companyName;
-
-    @ElementCollection(fetch = FetchType.EAGER)
-    private List<String> roles;
-
     private String guid;
+    private String username;
+    private String password;
+    private List<Role> roles;  // Changed from List<String> to List<Role>
     private String name;
-    private Integer age;
+    private int age;
     private String gender;
     private String nationalIdNumber;
     private String dateOfEmployment;
     private String specialty;
+    private String companyName;
 
+    // Convert roles into authorities for Spring Security
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
-                .map(role -> (GrantedAuthority) () -> "ROLE_" + role)
-                .toList();
+                .map(role -> (GrantedAuthority) () -> "ROLE_" + role.name())  // Convert Role to ROLE_ prefix
+                .collect(Collectors.toList());
     }
 
+    // Override methods from UserDetails
     @Override
     public boolean isAccountNonExpired() {
         return true;
